--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <h1>SPECTRUM CORTO</h1>
 
         <form id="urlForm" autocomplete="off">
-            <label for="urlInput">Detectara el code duplicado o transaction_id</label>
+            <label for="urlInput">Detectará el código duplicado o transaction_id</label>
             <input type="text" id="urlInput" name="url" required
                 placeholder="Ej. https://walr.com/?transaction_id=... or just the ID" autocomplete="off">
 
@@ -264,6 +264,11 @@
         <p id="error" class="error hidden"></p>
     </div>
 
+
+
+
+
+
     <script>
         function copyToClipboard(url) {
             navigator.clipboard.writeText(url).then(() => {
@@ -271,7 +276,7 @@
                 notification.classList.remove('hidden');
                 setTimeout(() => {
                     notification.classList.add('hidden');
-                }, 30000);
+                }, 3000); // Reducir el tiempo a 3 segundos
             }).catch(() => {
                 alert('Error al copiar al portapapeles');
             });
@@ -284,46 +289,86 @@
 
                 let spectrumId = null;
 
-                const regex20to22 = /[A-Za-z0-9]{20,22}/g;
+                // 1. Limpieza inicial: Eliminar espacios en blanco al principio y al final
+                url = url.trim();
 
-                if (url.startsWith('http://') || url.startsWith('https://')) {
-                    const regexDupFinder = /([A-Za-z0-9]{20,22})(?:.*?\1)/g;
-                    const matches = Array.from(url.matchAll(regexDupFinder));
-
-                    if (matches.length > 0) {
-                        spectrumId = matches[0][1];
-                        console.log("The link has duplicate id", spectrumId);
-                        if (/^[A-Za-z0-9]{20,22}$/.test(spectrumId)) {
-                            generatedUrl = `${BASE_URL_SPECTRUM}${spectrumId}`;
-                            return generatedUrl;
-                        }
-                    }
+                  // 2. Validación y uso directo del código si cumple con el formato (22 caracteres)
+                 if (/^[A-Za-z0-9]{22}$/.test(url)) {
+                    spectrumId = url;
+                    generatedUrl = `${BASE_URL_SPECTRUM}${spectrumId}`;
+                    return generatedUrl;
                 }
 
-                if (regex20to22.test(url) && !url.includes(' ')) {
-                    spectrumId = url;
-                    console.log("The link is 20 to 22 and has format, link", spectrumId)
-                    if (/^[A-Za-z0-9]{20,22}$/.test(spectrumId)) {
+                // 3. Búsqueda de parámetros conocidos (PRIORIZADO)
+                if (url.startsWith('http://') || url.startsWith('https://')) {
+                    const urlParams = new URL(url).searchParams;
+                    spectrumId = urlParams.get('transaction_id') || urlParams.get('trans_id') || urlParams.get('paid') || urlParams.get('id') || urlParams.get('rid');
+
+                    if (spectrumId && /^[A-Za-z0-9]{22}$/.test(spectrumId)) {  // Longitud específica de 22
                         generatedUrl = `${BASE_URL_SPECTRUM}${spectrumId}`;
                         return generatedUrl;
                     }
                 }
 
+                // 4. Búsqueda de duplicados (REQUIERE LONGITUD ESPECÍFICA)
+                if (url.startsWith('http://') || url.startsWith('https://')) {
+                    const regexDupFinder = /([A-Za-z0-9]{22})(?:.*?\1)/g;  // Longitud específica de 22
+                    const matches = Array.from(url.matchAll(regexDupFinder));
+
+                    if (matches.length > 0) {
+                        spectrumId = matches[0][1];
+                        generatedUrl = `${BASE_URL_SPECTRUM}${spectrumId}`;
+                        return generatedUrl;
+                    }
+                }
+
+                // 5. Búsqueda inteligente del código (SOLO SI NO SE ENCUENTRA NADA MÁS) - YA NO ES NECESARIA PERO SE MANTIENE POR SI ACASO
                 if (url.startsWith('http://') || url.startsWith('https://')) {
                     try {
-                        const urlParams = new URL(url).searchParams;
-                        spectrumId = urlParams.get('transaction_id') || urlParams.get('trans_id');
+                        const urlObj = new URL(url);
+                        const segmentos = urlObj.pathname.split('/').filter(Boolean).concat(Array.from(urlObj.searchParams.values()));
 
-                        if (spectrumId && /^[A-Za-z0-9]{20,22}$/.test(spectrumId)) {
+                        let mejorSegmento = null;
+                        let mejorPuntuacion = 0;
+
+                        for (const segmento of segmentos) {
+                            let puntuacion = 0;
+
+                            // Verificar Longitud (RANGO DE LONGITUD ESPECÍFICO)
+                            if (segmento.length === 22) {
+                                puntuacion++;
+                            }
+
+                            // Verificar Composición (Alfanumérico)
+                            if (/^[A-Za-z0-9]+$/.test(segmento)) {
+                                puntuacion++;
+                            }
+
+                            // Verificar Entorno (precedido/seguido por = o &)
+                            if (url.includes(`=${segmento}`) || url.includes(`&${segmento}`)) {
+                                puntuacion++;
+                            }
+
+                            // Actualizar el mejor segmento
+                            if (puntuacion > mejorPuntuacion) {
+                                mejorPuntuacion = puntuacion;
+                                mejorSegmento = segmento;
+                            }
+                        }
+
+                        if (mejorSegmento) {
+                            spectrumId = mejorSegmento;
+                             if (/^[A-Za-z0-9]{22}$/.test(spectrumId)) {
                             generatedUrl = `${BASE_URL_SPECTRUM}${spectrumId}`;
                             return generatedUrl;
+                            }
                         }
-                    }
-                    catch (e) {
+                    } catch (e) {
                         console.warn("Invalid URL format.  ", e);
                         return null;
                     }
                 }
+
 
                 console.warn("No Spectrum ID found using correct method.");
                 return null;
@@ -341,7 +386,7 @@
             return new Promise((resolve, reject) => {
                 let spectrumResult = processUrlWithSpectrumId(url);
                 if (spectrumResult) return resolve(spectrumResult);
-                else return reject("URL no válida para Spectrum");
+                else return reject("No se encontró un ID de Spectrum válido en el formato esperado (22 caracteres alfanuméricos).");  // MENSAJE DE ERROR ESPECÍFICO
             });
         }
 
@@ -382,6 +427,11 @@
                 });
         });
     </script>
+
+
+
+
+    
 </body>
 
 </html>
