--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 <body>
     <div class="container">
-        <h1>SPECTRUM CORTO</h1>
+        <h1>ALL SPECTRUM</h1>
 
         <form id="urlForm" autocomplete="off">
             <label for="urlInput">Ingresa la URL o el código de 22 caracteres</label>
