--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <button type="submit">Generar Link</button>
         </form>
 
-
+        <h2 id="generatedTitle" class="hidden">Spectrum:</h2>
         <p id="generatedUrl" class="hidden"></p>
         <p id="notification" class="notification hidden">URL Copiado Automaticamente!</p>
         <p id="error" class="error hidden"></p>
