--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <form id="urlForm" autocomplete="off">
             <label for="urlInput">Se genera en base al .txt UnevennesX</label>
             <input type="text" id="urlInput" name="url" required
-                placeholder="Ej. https://walr.com/?transaction_id=... o el código directamente" autocomplete="off">
+                placeholder="Ej. https://walr.com/?transaction_id=..." autocomplete="off">
 
             <button type="submit">Generar Link</button>
         </form>
