--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale: 1.0">
-    <title>ALL Spectrum</title>
+    <title>Herramienta URL - Spectrum</title>
     <link rel="icon" type="image/png"
         href="https://cdn.dribbble.com/users/7549673/screenshots/17206704/media/1210a9d0ec8af427967e735935861eeb.png?resize=400x300&vertical=center" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -248,7 +248,7 @@
 
 <body>
     <div class="container">
-        <h1>ALL SPECTRUM</h1>
+        <h1>👻ALL SPECTRUM👻</h1>
 
         <form id="urlForm" autocomplete="off">
             <label for="urlInput">Se genera en base al .txt UnevennesX</label>
@@ -285,6 +285,7 @@
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
                 const data = await response.text();
+                const cacheBustingParam = `?cb=${Date.now()}`; // Add cache-busting parameter
                 return parseData(data);
             } catch (error) {
                 console.error('Error al obtener los datos:', error);
@@ -329,76 +330,63 @@
 
                     if (!foundEntry) {
                         console.warn("No se encontró una entrada coincidente en el archivo de configuración.");
-                        throw new Error("No encontrado en la base de datos.");
+                        throw new Error("No encontrado.");
                     }
 
                     if (url.startsWith('http://') || url.startsWith('https://')) {
                         const urlParams = new URL(url).searchParams;
                         spectrumId = urlParams.get('transaction_id') || urlParams.get('trans_id') || urlParams.get('paid') || urlParams.get('id') || urlParams.get('rid') || urlParams.get('ps_hash');
-                    }
-
-                    if (!spectrumId || !/^[A-Za-z0-9]{22}$/.test(spectrumId)) {
-                        console.warn("No se encontró un ID válido (22 caracteres) en la URL.");
-                        if (foundEntry.URL.includes("ps_hash")) {
-                            if (!/^[A-Za-z0-9]{8}$/.test(spectrumId)) {
-                                console.warn("No se encontró un hash válido (8 caracteres) en la URL.");
-                                throw new Error("Hash inválido.");
-                            }
-                        } else {
-                            throw new Error("ID inválido.");
+                    } else {
+                        //If not starts with http, it must have the txt 22 char url if not report error
+                        if (!/^[A-Za-z0-9]{22}$/.test(url)) {
+                            throw new Error("URL Inválida.");
                         }
                     }
                 }
+
+                if (!foundEntry) {
+                    throw new Error("Entrada no encontrada.");
+                }
                 let baseURL = foundEntry ? foundEntry.URL : null;
+
+
                 if (!baseURL) {
                     console.warn("No se encontró URL en el archivo de configuración.");
-                    throw new Error("URL base no configurada.");
+                    throw new Error("Base URL no configurada.");
                 }
-                // Validate against the data.txt entry
-                if (foundEntry && foundEntry.URL && !url.startsWith(foundEntry.URL)) {
-                    // If ps_hash is involved, just keep that part of base URL
-                    if (baseURL.includes("ps_hash")) {
-                        const baseUrlWithoutParams = baseURL.split('?')[0]; // Extract base URL without query params
-                        generatedUrl = `${baseUrlWithoutParams}?st=21&ps_hash=${spectrumId}&transaction_id=`;
-                    } else {
-                        generatedUrl = `${baseURL}${spectrumId}`;
-                    }
+
+                // Build the URL based on the TXT format, ALWAYS populating transaction_id
+                if (baseURL.includes("transaction_id=")) {
+                    baseURL = baseURL.replace(/transaction_id=[^&]*/, `transaction_id=${spectrumId}`); // Replace existing transaction_id value
 
                 }
 
-
-                generatedUrl = `${baseURL}${spectrumId}`;
-
-                if (baseURL.includes("ps_hash=")) {
-
-                    if (!/^[A-Za-z0-9]{8}$/.test(spectrumId)) {
-                       throw new Error("Hash inválido.");
-                    }
-                }
+                generatedUrl = `${baseURL}`;
 
                 return generatedUrl;
 
-
             } catch (error) {
                 console.error('Error al procesar la URL:', error);
-                 showErrorMessage("Error: " + error.message); // Show simplified error from processUrl
+                showErrorMessage("Error: " + error.message); // Show simplified error from processUrl
                 return null;
             }
         }
 
         function dispatchUrl(url, data) {
             if (!url.trim()) {
-                showErrorMessage("Ingresa una URL o código."); // Directly display message and resolve
-                return Promise.resolve(); // Immediately resolve the promise to prevent further execution.
+                showErrorMessage("Ingresa URL o código."); // Directly display message
+                return Promise.resolve(); // Immediately resolve.
             }
 
             return new Promise((resolve, reject) => {
                 let spectrumResult = processUrlWithSpectrumId(url, data);
                 if (spectrumResult) {
-                    resolve({generatedUrl: spectrumResult, originalUrl: url });
+                    resolve({
+                        generatedUrl: spectrumResult,
+                        originalUrl: url
+                    });
                 } else {
-                    // Errors are displayed in processUrlWithSpectrumId function, so there is no need to have a message.
-                    reject();
+                    reject(); // Errors displayed by processUrlWithSpectrumId
                 }
 
             });
@@ -480,7 +468,7 @@
                         }
                     })
                     .catch(error => {
-                         // Errors are displayed in processUrlWithSpectrumId function, so there is no need to have a message.
+                        // Errors displayed by processUrlWithSpectrumId
                     });
             });
         });
