--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale: 1.0">
-    <title>Herramienta URL - Spectrum</title>
+    <title>All Spectrum</title>
     <link rel="icon" type="image/png"
         href="https://cdn.dribbble.com/users/7549673/screenshots/17206704/media/1210a9d0ec8af427967e735935861eeb.png?resize=400x300&vertical=center" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -248,7 +248,7 @@
 
 <body>
     <div class="container">
-        <h1>👻ALL SPECTRUM👻</h1>
+        <h1>🩶ALL SPECTRUM🩶</h1>
 
         <form id="urlForm" autocomplete="off">
             <label for="urlInput">Se genera en base al .txt UnevennesX</label>
